crates/devup-mcp-devup-ui/tests/snapshots/wquw_151_frames__wquw_151_frame_3879_36059.snap
---
source: crates/devup-mcp-devup-ui/tests/wquw_151_frames.rs
assertion_line: 218
expression: output.tsx
---
import { Box, Center, Flex, Image, Text, VStack } from "@devup-ui/react";

export function Wquw151Frame387936059() {
  return (
    <VStack
      bg="$backgroundLight"
      h="740px"
      overflow="hidden"
      pos="relative"
      w="360px"
    >
      <Flex
        alignItems="center"
        h="66px"
        justifyContent="space-between"
        overflow="hidden"
        py="8px"
        w="360px"
      >
        <Box
          aspectRatio="1"
          bg="$caption"
          h="100%"
          maskImage="url('/icons/Frame 26086041.svg')"
          maskPos="center"
          maskRepeat="no-repeat"
          maskSize="contain"
          w="50px"
        />
        <Center h="100%" px="20px">
          <Flex alignItems="center" gap="6px">
            <Box
              aspectRatio="1"
              bg="$captionLight"
              boxSize="20px"
              maskImage="url('/icons/arrow_7134700 1.svg')"
              maskPos="center"
              maskRepeat="no-repeat"
              maskSize="contain"
            />
            <Text color="$textLight" typography="captionSemibold" wordBreak="keep-all">
              초기화
            </Text>
          </Flex>
        </Center>
      </Flex>
      <VStack
        alignItems="center"
        flex="1"
        gap="20px"
        px="30px"
        py="20px"
      >
        <Text
          color="$text"
          overflow="hidden"
          textOverflow="ellipsis"
          typography="h4"
          w="100%"
          wordBreak="keep-all"
        >
          주말 아침, 늦잠을 자는 편인지 부지런히 움직이는 편인지 주말 풍경에 대해 이야기해주세요
        </Text>
        <Center
          bg="$dustyMintBg"
          borderRadius="12px"
          gap="8px"
          px="16px"
          py="10px"
          w="100%"
        >
          <Box
            aspectRatio="1"
            bg="$secondary"
            boxSize="16px"
            maskImage="url('/icons/information-button_1176 1.svg')"
            maskPos="center"
            maskRepeat="no-repeat"
            maskSize="contain"
          />
          <Text color="$secondary" typography="bodyXsSemibold" wordBreak="keep-all">
            이야기가 막힐 때 눌러보세요
          </Text>
        </Center>
        <Text
          color="$textLight"
          flex="1"
          overflow="hidden"
          textOverflow="ellipsis"
          typography="recordText"
          w="100%"
          wordBreak="keep-all"
        >
          그건 어느 추운 겨울날이었어. 바깥에는 <br />첫눈이 내려 온통 세상이 하얗고 거리의 소음마저 눈에 묻혀 조용한 오후였지. 나는 버스 정류장에서 잔뜩 움츠린 채 서 있었어.
        </Text>
        <Flex alignItems="center" gap="30px">
          <Center flexDir="column" gap="8px">
            <Text color="$textLight" typography="captionSemibold" wordBreak="keep-all">
              직접 입력
            </Text>
            <Image aspectRatio="1" boxShadow="0 4px 32px 0 #46608740" boxSize="60px" src="/icons/플레이 버튼.svg" />
          </Center>
          <Center flexDir="column" gap="8px">
            <Text color="$textLight" typography="captionSemibold" wordBreak="keep-all">
              녹음하기
            </Text>
            <Image aspectRatio="1" boxShadow="0 4px 32px 0 #46608740" boxSize="80px" src="/icons/플레이 버튼.svg" />
          </Center>
          <Center flexDir="column" gap="8px">
            <Text color="$textLight" typography="captionSemibold" wordBreak="keep-all">
              작성 완료
            </Text>
            <Image aspectRatio="1" boxShadow="0 4px 32px 0 #46608740" boxSize="60px" src="/icons/플레이 버튼.svg" />
          </Center>
        </Flex>
        <Text color="$caption" typography="bodyXsSemibold" wordBreak="keep-all">
          임시 저장하고 다음에 이어서 하기
        </Text>
      </VStack>
      <Box
        backdropFilter="blur(8px)"
        bg="#000000B2"
        h="740px"
        left="50%"
        overflow="hidden"
        pos="absolute"
        px="20px"
        py="196.5px"
        top="0px"
        transform="translateX(-50%)"
        w="100%"
      >
        <VStack
          bg="$containerBackground"
          border="solid 1px $border"
          borderRadius="20px"
          overflow="hidden"
          w="320px"
        >
          <Center flexDir="column" gap="8px" minH="180px" p="30px">
            <Text color="$text" typography="h6" wordBreak="keep-all">
              이야기 다듬기 시작
            </Text>
            <Center flexDir="column" gap="12px" w="100%">
              <Text
                color="$text"
                overflow="hidden"
                textAlign="center"
                textOverflow="ellipsis"
                typography="bodySm"
                w="100%"
                wordBreak="keep-all"
              >
                이야기를 마무리 하고<br />글 다듬기를 시작하시겠습니까?
              </Text>
              <VStack
                bg="$gray100"
                borderRadius="12px"
                gap="12px"
                px="16px"
                py="12px"
                w="100%"
              >
                <Text
                  color="$textLight"
                  overflow="hidden"
                  textOverflow="ellipsis"
                  typography="caption"
                  wordBreak="keep-all"
                >
                  원하는 글 다듬기 방식을 선택해주세요.
                </Text>
                <VStack gap="8px">
                  <Flex alignItems="center" gap="8px">
                    <Box
                      aspectRatio="1"
                      bg="#FFF"
                      border="solid 6px $primary"
                      borderRadius="1000px"
                      boxSize="20px"
                      overflow="hidden"
                    />
                    <Text color="$text" typography="bodyXs" wordBreak="keep-all">
                      AI 담당자와 함께 문체 다듬기
                    </Text>
                  </Flex>
                  <Flex alignItems="center" gap="8px">
                    <Box
                      aspectRatio="1"
                      bg="#FFF"
                      border="solid 1px $borderBold"
                      borderRadius="1000px"
                      boxSize="20px"
                      overflow="hidden"
                    />
                    <Text color="$text" typography="bodyXs" wordBreak="keep-all">
                      내 문장 그대로 맞춤법만 다듬기
                    </Text>
                  </Flex>
                </VStack>
              </VStack>
            </Center>
          </Center>
          <Flex>
            <Center borderTop="solid 1px $border" flex="1" px="10px" py="16px">
              <Text color="$textLight" typography="bodySmSemibold" wordBreak="keep-all">
                더 이야기 할게요
              </Text>
            </Center>
            <Center
              borderLeft="solid 1px $border"
              borderTop="solid 1px $border"
              flex="1"
              px="10px"
              py="16px"
            >
              <Text color="$primary" typography="bodySmSemibold" wordBreak="keep-all">
                마무리 할게요
              </Text>
            </Center>
          </Flex>
        </VStack>
      </Box>
    </VStack>
  );
}
